redesign service, facade and rest layer for including the relation between training definition and abstract level.