@@ -40,6 +40,7 @@ import org.springframework.web.client.RestTemplate;
 import javax.servlet.http.HttpServletRequest;
 import java.io.FileReader;
 import java.io.IOException;
+import java.time.Clock;
 import java.time.LocalDateTime;
 import java.util.*;
 
@@ -105,34 +106,35 @@ public class TrainingDefinitionServiceTest {
 
         level3 = new AssessmentLevel();
         level3.setId(3L);
-        level3.setNextLevel(null);
+        level3.setOrder(3);
 
         level2 = new AssessmentLevel();
         level2.setId(2L);
-        level2.setNextLevel(level3.getId());
+        level2.setOrder(2);
         level2.setQuestions(questions);
 
         level1 = new AssessmentLevel();
         level1.setId(1L);
-        level1.setNextLevel(level2.getId());
+        level1.setOrder(1);
 
         gameLevel = new GameLevel();
         gameLevel.setId(4L);
-        gameLevel.setNextLevel(null);
+        gameLevel.setOrder(4);
 
         infoLevel = new InfoLevel();
         infoLevel.setId(5L);
-        infoLevel.setNextLevel(gameLevel.getId());
+        infoLevel.setOrder(5);
 
         newGameLevel = new GameLevel();
         newGameLevel.setId(10L);
         newGameLevel.setMaxScore(100);
         newGameLevel.setTitle("Title of game level");
-        newGameLevel.setIncorrectFlagLimit(5);
+        newGameLevel.setIncorrectFlagLimit(0);
         newGameLevel.setFlag("Secret flag");
         newGameLevel.setSolution("Solution of the game should be here");
         newGameLevel.setSolutionPenalized(true);
         newGameLevel.setEstimatedDuration(1);
+        newGameLevel.setOrder(10);
         newGameLevel.setContent("The test entry should be here");
 
         newInfoLevel = new InfoLevel();
@@ -140,6 +142,7 @@ public class TrainingDefinitionServiceTest {
         newInfoLevel.setTitle("Title of info Level");
         newInfoLevel.setMaxScore(20);
         newInfoLevel.setContent("Content of info level should be here.");
+        newInfoLevel.setOrder(11);
 
         newAssessmentLevel = new AssessmentLevel();
         newAssessmentLevel.setId(12L);
@@ -148,6 +151,7 @@ public class TrainingDefinitionServiceTest {
         newAssessmentLevel.setMaxScore(0);
         newAssessmentLevel.setInstructions("Instructions should be here");
         newAssessmentLevel.setQuestions("[]");
+        newAssessmentLevel.setOrder(12);
 
         trainingDefinition1 = new TrainingDefinition();
         trainingDefinition1.setId(1L);
@@ -163,13 +167,11 @@ public class TrainingDefinitionServiceTest {
         trainingDefinition2.setDescription("test2");
         trainingDefinition2.setTitle("test2");
         trainingDefinition2.setState(TDState.UNRELEASED);
-        trainingDefinition2.setStartingLevel(infoLevel.getId());
         trainingDefinition2.setSandboxDefinitionRefId(1L);
 
         unreleasedDefinition = new TrainingDefinition();
         unreleasedDefinition.setId(4L);
         unreleasedDefinition.setState(TDState.UNRELEASED);
-        unreleasedDefinition.setStartingLevel(level1.getId());
         unreleasedDefinition.setBetaTestingGroup(viewGroup);
 
         releasedDefinition = new TrainingDefinition();
@@ -179,7 +181,6 @@ public class TrainingDefinitionServiceTest {
         definitionWithoutLevels = new TrainingDefinition();
         definitionWithoutLevels.setId(8L);
         definitionWithoutLevels.setState(TDState.UNRELEASED);
-        definitionWithoutLevels.setStartingLevel(null);
         definitionWithoutLevels.setBetaTestingGroup(viewGroup);
 
         pageable = PageRequest.of(0, 10);
@@ -298,128 +299,6 @@ public class TrainingDefinitionServiceTest {
         trainingDefinitionService.update(null);
     }
 
-    @Test
-    public void swapLeft() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        given(abstractLevelRepository.findById(level1.getId())).willReturn(Optional.of(level1));
-        given(abstractLevelRepository.findById(level2.getId())).willReturn(Optional.of(level2));
-
-        trainingDefinitionService.swapLeft(unreleasedDefinition.getId(), level2.getId());
-        assertEquals(unreleasedDefinition.getStartingLevel(), level2.getId());
-        assertEquals(level2.getNextLevel(), level1.getId());
-        assertEquals(level1.getNextLevel(), level3.getId());
-
-        then(trainingDefinitionRepository).should().findById(unreleasedDefinition.getId());
-        then(abstractLevelRepository).should(times(3)).findById(any(Long.class));
-        then(assessmentLevelRepository).should(times(2)).save(any(AssessmentLevel.class));
-    }
-
-    @Test
-    public void swapLeftWithCannotBeUpdatedException() {
-        given(trainingDefinitionRepository.findById(releasedDefinition.getId())).willReturn(Optional.of(releasedDefinition));
-        thrown.expect(ServiceLayerException.class);
-        thrown.expectMessage("Cannot edit released or archived training definition");
-
-        trainingDefinitionService.swapLeft(releasedDefinition.getId(), any(Long.class));
-    }
-
-    @Test
-    public void swapLeftOnFirstLevel() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        given(abstractLevelRepository.findById(level1.getId())).willReturn(Optional.of(level1));
-        thrown.expect(ServiceLayerException.class);
-        thrown.expectMessage("Cannot swap left first level");
-
-        trainingDefinitionService.swapLeft(unreleasedDefinition.getId(), level1.getId());
-    }
-
-    @Test
-    public void swapLeftWithNullDefinition() {
-        thrown.expect(ServiceLayerException.class);
-        trainingDefinitionService.swapLeft(null, level2.getId());
-    }
-
-
-
-    @Test
-    public void swapLeftWithNullLevel() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        thrown.expect(ServiceLayerException.class);
-        trainingDefinitionService.swapLeft(unreleasedDefinition.getId(), null);
-    }
-
-    @Test
-    public void swapLeftWithCreatedInstances() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        given(trainingInstanceRepository.existsAnyForTrainingDefinition(unreleasedDefinition.getId())).willReturn(true);
-        thrown.expect(ServiceLayerException.class);
-        thrown.expectMessage("Cannot update training definition with already created training instance. " +
-            "Remove training instance/s before updating training definition.");
-        trainingDefinitionService.swapLeft(unreleasedDefinition.getId(), level2.getId());
-    }
-
-    @Test
-    public void swapRight() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        given(abstractLevelRepository.findById(level1.getId())).willReturn(Optional.of(level1));
-        given(abstractLevelRepository.findById(level2.getId())).willReturn(Optional.of(level2));
-
-        trainingDefinitionService.swapRight(unreleasedDefinition.getId(), level1.getId());
-        assertEquals(unreleasedDefinition.getStartingLevel(), level2.getId());
-        assertEquals(level2.getNextLevel(), level1.getId());
-        assertEquals(level1.getNextLevel(), level3.getId());
-
-        then(trainingDefinitionRepository).should().findById(unreleasedDefinition.getId());
-        then(abstractLevelRepository).should(times(2)).findById(any(Long.class));
-        then(assessmentLevelRepository).should(times(2)).save(any(AssessmentLevel.class));
-    }
-
-    @Test
-    public void swapRightWithCannotBeUpdatedException() {
-        given(trainingDefinitionRepository.findById(releasedDefinition.getId())).willReturn(Optional.of(releasedDefinition));
-        thrown.expect(ServiceLayerException.class);
-        thrown.expectMessage("Cannot edit released or archived training definition");
-
-        trainingDefinitionService.swapRight(releasedDefinition.getId(), any(Long.class));
-    }
-
-    @Test
-    public void swapRightOnLastLevel() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        given(abstractLevelRepository.findById(level3.getId())).willReturn(Optional.of(level3));
-        given(abstractLevelRepository.findById(level1.getId())).willReturn(Optional.of(level1));
-        given(abstractLevelRepository.findById(level2.getId())).willReturn(Optional.of(level2));
-
-        thrown.expect(ServiceLayerException.class);
-        thrown.expectMessage("Cannot swap right last level");
-
-        trainingDefinitionService.swapRight(unreleasedDefinition.getId(), level3.getId());
-    }
-
-    @Test
-    public void swapRightWithCreatedInstances() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        given(trainingInstanceRepository.existsAnyForTrainingDefinition(unreleasedDefinition.getId())).willReturn(true);
-        thrown.expect(ServiceLayerException.class);
-        thrown.expectMessage("Cannot update training definition with already created training instance. " +
-            "Remove training instance/s before updating training definition.");
-        trainingDefinitionService.swapRight(unreleasedDefinition.getId(), level2.getId());
-    }
-
-    @Test
-    public void swapRightWithNullDefinition() {
-        thrown.expect(ServiceLayerException.class);
-        trainingDefinitionService.swapRight(null, level2.getId());
-    }
-
-    @Test
-    public void swapRightWithNullLevel() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        thrown.expect(ServiceLayerException.class);
-        trainingDefinitionService.swapRight(unreleasedDefinition.getId(), null);
-    }
-
-    @Test
     public void delete() {
         given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
         given(abstractLevelRepository.findById(level1.getId())).willReturn(Optional.of(level1));
@@ -460,32 +339,16 @@ public class TrainingDefinitionServiceTest {
     }
 
     @Test
-    public void deleteOneLevelOnFirstLevel() {
+    public void deleteOneLevel() {
         given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
         given(abstractLevelRepository.findById(level1.getId())).willReturn(Optional.of(level1));
 
         trainingDefinitionService.deleteOneLevel(unreleasedDefinition.getId(), level1.getId());
-        assertEquals(unreleasedDefinition.getStartingLevel(), level2.getId());
+        assertEquals(unreleasedDefinition.getLastEdited().getSecond(), LocalDateTime.now(Clock.systemUTC()).getSecond());
 
         then(trainingDefinitionRepository).should().findById(unreleasedDefinition.getId());
         then(abstractLevelRepository).should().findById(any(Long.class));
-        then(trainingDefinitionRepository).should().save(unreleasedDefinition);
         then(assessmentLevelRepository).should().delete(level1);
-    }
-
-    @Test
-    public void deleteOneLevelOnMiddleLevel() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        given(abstractLevelRepository.findById(level1.getId())).willReturn(Optional.of(level1));
-        given(abstractLevelRepository.findById(level2.getId())).willReturn(Optional.of(level2));
-
-        trainingDefinitionService.deleteOneLevel(unreleasedDefinition.getId(), level2.getId());
-        assertEquals(level1.getNextLevel(), level3.getId());
-
-        then(trainingDefinitionRepository).should().findById(unreleasedDefinition.getId());
-        then(abstractLevelRepository).should(times(3)).findById(any(Long.class));
-        then(assessmentLevelRepository).should().delete(level2);
-        then(assessmentLevelRepository).should().save(level1);
     }
 
     @Test
@@ -512,26 +375,15 @@ public class TrainingDefinitionServiceTest {
     }
 
     @Test
-    public void deleteOneLevelWithCreatedInstances() {
-        given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        given(trainingInstanceRepository.existsAnyForTrainingDefinition(unreleasedDefinition.getId())).willReturn(true);
-        thrown.expect(ServiceLayerException.class);
-        thrown.expectMessage("Cannot update training definition with already created training instance. " +
-            "Remove training instance/s before updating training definition.");
-        trainingDefinitionService.deleteOneLevel(unreleasedDefinition.getId(), level2.getId());
-    }
-
-    @Test
     public void updateAssessmentLevel() {
         given(trainingDefinitionRepository.findById(unreleasedDefinition.getId())).willReturn(Optional.of(unreleasedDefinition));
-        given(abstractLevelRepository.findById(level1.getId())).willReturn(Optional.of(level1));
-        given(abstractLevelRepository.findById(level2.getId())).willReturn(Optional.of(level2));
+        given(abstractLevelRepository.findLevelInDefinition(anyLong(), anyLong())).willReturn(Optional.of(level2));
         given(assessmentLevelRepository.findById(any(Long.class))).willReturn(Optional.of(level2));
 
         trainingDefinitionService.updateAssessmentLevel(unreleasedDefinition.getId(), level2);
 
         then(trainingDefinitionRepository).should().findById(unreleasedDefinition.getId());
-        then(abstractLevelRepository).should(times(2)).findById(any(Long.class));
+        then(assessmentLevelRepository).should().findById(any(Long.class));
         then(assessmentLevelRepository).should().save(level2);
     }
 
@@ -548,7 +400,6 @@ public class TrainingDefinitionServiceTest {
     public void updateAssessmentLevelWithLevelNotInDefinition() {
         AssessmentLevel level = new AssessmentLevel();
         level.setId(8L);
-        level.setNextLevel(null);
         given(abstractLevelRepository.findById(level1.getId())).willReturn(Optional.of(level1));
         given(abstractLevelRepository.findById(level2.getId())).willReturn(Optional.of(level2));
         given(abstractLevelRepository.findById(level3.getId())).willReturn(Optional.of(level3));
@@ -584,14 +435,14 @@ public class TrainingDefinitionServiceTest {
 
     @Test
     public void updateGameLevel() {
-        given(trainingDefinitionRepository.findById(trainingDefinition2.getId())).willReturn(Optional.of(trainingDefinition2));
-        given(abstractLevelRepository.findById(any(Long.class))).willReturn(Optional.of(infoLevel));
-        given(abstractLevelRepository.findById(any(Long.class))).willReturn(Optional.of(gameLevel));
-        given(gameLevelRepository.findById(any(Long.class))).willReturn(Optional.of(gameLevel));
+        given(trainingDefinitionRepository.findById(anyLong())).willReturn(Optional.of(trainingDefinition2));
+        given(trainingInstanceRepository.existsAnyForTrainingDefinition(anyLong())).willReturn(false);
+        given(gameLevelRepository.findById(anyLong())).willReturn(Optional.of(gameLevel));
+        given(abstractLevelRepository.findLevelInDefinition(anyLong(), anyLong())).willReturn(Optional.of(gameLevel));
         trainingDefinitionService.updateGameLevel(trainingDefinition2.getId(), gameLevel);
 
-        then(trainingDefinitionRepository).should().findById(trainingDefinition2.getId());
-        then(abstractLevelRepository).should().findById(any(Long.class));
+        then(trainingDefinitionRepository).should().findById(anyLong());
+        then(gameLevelRepository).should().findById(anyLong());
         then(gameLevelRepository).should().save(gameLevel);
     }
 
@@ -608,7 +459,6 @@ public class TrainingDefinitionServiceTest {
     public void updateGameLevelWithLevelNotInDefinition() {
         GameLevel level = new GameLevel();
         level.setId(8L);
-        level.setNextLevel(null);
         given(abstractLevelRepository.findById(infoLevel.getId())).willReturn(Optional.of(infoLevel));
         given(abstractLevelRepository.findById(gameLevel.getId())).willReturn(Optional.of(gameLevel));
         given(trainingDefinitionRepository.findById(trainingDefinition2.getId())).willReturn(Optional.of(trainingDefinition2));
@@ -645,7 +495,10 @@ public class TrainingDefinitionServiceTest {
     public void updateInfoLevel() {
         given(trainingDefinitionRepository.findById(trainingDefinition2.getId())).willReturn(Optional.of(trainingDefinition2));
         given(infoLevelRepository.findById(any(Long.class))).willReturn(Optional.of(infoLevel));
+        given(abstractLevelRepository.findLevelInDefinition(anyLong(), anyLong())).willReturn(Optional.of(infoLevel));
+
         trainingDefinitionService.updateInfoLevel(trainingDefinition2.getId(), infoLevel);
+
         then(trainingDefinitionRepository).should().findById(trainingDefinition2.getId());
         then(infoLevelRepository).should().save(infoLevel);
     }
@@ -663,7 +516,6 @@ public class TrainingDefinitionServiceTest {
     public void updateInfoLevelWithLevelNotInDefinition() {
         InfoLevel level = new InfoLevel();
         level.setId(8L);
-        level.setNextLevel(null);
         given(abstractLevelRepository.findById(infoLevel.getId())).willReturn(Optional.of(infoLevel));
         given(abstractLevelRepository.findById(gameLevel.getId())).willReturn(Optional.of(gameLevel));
         given(trainingDefinitionRepository.findById(trainingDefinition2.getId())).willReturn(Optional.of(trainingDefinition2));
@@ -699,31 +551,12 @@ public class TrainingDefinitionServiceTest {
     @Test
     public void createGameLevel() {
         given(trainingDefinitionRepository.findById(trainingDefinition2.getId())).willReturn(Optional.of(trainingDefinition2));
-        given(abstractLevelRepository.findById(gameLevel.getId())).willReturn(Optional.of(gameLevel));
-        given(abstractLevelRepository.findById(infoLevel.getId())).willReturn(Optional.of(infoLevel));
         given(gameLevelRepository.save(any(GameLevel.class))).willReturn(newGameLevel);
         GameLevel createdLevel = trainingDefinitionService.createGameLevel(trainingDefinition2.getId());
 
         assertEquals(newGameLevel, createdLevel);
-        assertEquals(gameLevel.getNextLevel(), createdLevel.getId());
 
-        then(abstractLevelRepository).should(times(2)).findById(any(Long.class));
         then(trainingDefinitionRepository).should().findById(trainingDefinition2.getId());
-    }
-
-    @Test
-    public void createGameLevelAsFirstLevel() {
-        given(trainingDefinitionRepository.findById(definitionWithoutLevels.getId())).willReturn(Optional.of(definitionWithoutLevels));
-        given(gameLevelRepository.save(any(GameLevel.class))).willReturn(newGameLevel);
-
-        GameLevel createdLevel = trainingDefinitionService.createGameLevel(definitionWithoutLevels.getId());
-
-        assertNotNull(createdLevel);
-        assertEquals(newGameLevel, createdLevel);
-        assertEquals(definitionWithoutLevels.getStartingLevel(), createdLevel.getId());
-
-        then(trainingDefinitionRepository).should(times(2)).findById(definitionWithoutLevels.getId());
-        then(trainingDefinitionRepository).should().save(definitionWithoutLevels);
     }
 
     @Test
@@ -753,37 +586,17 @@ public class TrainingDefinitionServiceTest {
         trainingDefinitionService.createGameLevel(unreleasedDefinition.getId());
     }
 
-
     @Test
     public void createInfoLevel() {
         given(trainingDefinitionRepository.findById(trainingDefinition2.getId())).willReturn(Optional.of(trainingDefinition2));
-        given(abstractLevelRepository.findById(gameLevel.getId())).willReturn(Optional.of(gameLevel));
-        given(abstractLevelRepository.findById(infoLevel.getId())).willReturn(Optional.of(infoLevel));
         given(infoLevelRepository.save(any(InfoLevel.class))).willReturn(newInfoLevel);
 
         InfoLevel createdLevel = trainingDefinitionService.createInfoLevel(trainingDefinition2.getId());
 
         assertNotNull(createdLevel);
         assertEquals(newInfoLevel, createdLevel);
-        assertEquals(gameLevel.getNextLevel(), createdLevel.getId());
 
-        then(abstractLevelRepository).should(times(2)).findById(any(Long.class));
         then(trainingDefinitionRepository).should().findById(trainingDefinition2.getId());
-    }
-
-    @Test
-    public void createInfoLevelAsFirstLevel() {
-        given(trainingDefinitionRepository.findById(definitionWithoutLevels.getId())).willReturn(Optional.of(definitionWithoutLevels));
-        given(infoLevelRepository.save(any(InfoLevel.class))).willReturn(newInfoLevel);
-
-        InfoLevel createdLevel = trainingDefinitionService.createInfoLevel(definitionWithoutLevels.getId());
-
-        assertNotNull(createdLevel);
-        assertEquals(newInfoLevel, createdLevel);
-        assertEquals(definitionWithoutLevels.getStartingLevel(), createdLevel.getId());
-
-        then(trainingDefinitionRepository).should(times(2)).findById(definitionWithoutLevels.getId());
-        then(trainingDefinitionRepository).should().save(definitionWithoutLevels);
     }
 
     @Test
@@ -816,33 +629,14 @@ public class TrainingDefinitionServiceTest {
     @Test
     public void createAssessmentLevel() {
         given(trainingDefinitionRepository.findById(trainingDefinition2.getId())).willReturn(Optional.of(trainingDefinition2));
-        given(abstractLevelRepository.findById(gameLevel.getId())).willReturn(Optional.of(gameLevel));
-        given(abstractLevelRepository.findById(infoLevel.getId())).willReturn(Optional.of(infoLevel));
         given(assessmentLevelRepository.save(any(AssessmentLevel.class))).willReturn(newAssessmentLevel);
 
         AssessmentLevel createdLevel = trainingDefinitionService.createAssessmentLevel(trainingDefinition2.getId());
 
         assertNotNull(createdLevel);
         assertEquals(newAssessmentLevel, createdLevel);
-        assertEquals(gameLevel.getNextLevel(), createdLevel.getId());
 
-        then(abstractLevelRepository).should(times(2)).findById(any(Long.class));
         then(trainingDefinitionRepository).should().findById(trainingDefinition2.getId());
-    }
-
-    @Test
-    public void createAssessmentLevelAsFirstLevel() {
-        given(trainingDefinitionRepository.findById(definitionWithoutLevels.getId())).willReturn(Optional.of(definitionWithoutLevels));
-        given(assessmentLevelRepository.save(any(AssessmentLevel.class))).willReturn(newAssessmentLevel);
-
-        AssessmentLevel createdLevel = trainingDefinitionService.createAssessmentLevel(definitionWithoutLevels.getId());
-
-        assertNotNull(createdLevel);
-        assertEquals(newAssessmentLevel, createdLevel);
-        assertEquals(definitionWithoutLevels.getStartingLevel(), createdLevel.getId());
-
-        then(trainingDefinitionRepository).should(times(2)).findById(definitionWithoutLevels.getId());
-        then(trainingDefinitionRepository).should().save(definitionWithoutLevels);
     }
 
     @Test
@@ -870,22 +664,6 @@ public class TrainingDefinitionServiceTest {
         thrown.expectMessage("Cannot update training definition with already created training instance. " +
             "Remove training instance/s before updating training definition.");
         trainingDefinitionService.createAssessmentLevel(unreleasedDefinition.getId());
-    }
-
-    @Test
-    public void findAllLevelsFromDefinition() {
-        given(trainingDefinitionRepository.findById(trainingDefinition2.getId())).willReturn(Optional.of(trainingDefinition2));
-        given(abstractLevelRepository.findById(infoLevel.getId())).willReturn(Optional.of(infoLevel));
-        given(abstractLevelRepository.findById(gameLevel.getId())).willReturn(Optional.of(gameLevel));
-        ArrayList<AbstractLevel> expected = new ArrayList<>();
-        expected.add(infoLevel);
-        expected.add(gameLevel);
-
-        List<AbstractLevel> actual = trainingDefinitionService.findAllLevelsFromDefinition(trainingDefinition2.getId());
-
-        assertEquals(expected, actual);
-        then(abstractLevelRepository).should(times(2)).findById(any(Long.class));
-        then(trainingDefinitionRepository).should().findById(trainingDefinition2.getId());
     }
 
     @Test
@@ -929,46 +707,6 @@ public class TrainingDefinitionServiceTest {
         trainingDefinitionService.findLevelById(555L);
     }
 
-//    @Test
-//    public void getUsersWithGivenRole() {
-//        when(groupRef1.getIdmGroupId()).thenReturn(1L);
-//        when(groupRef2.getIdmGroupId()).thenReturn(2L);
-//        when(userInfoDTO1.getLogin()).thenReturn("peter@mail.muni.cz");
-//        when(userInfoDTO2.getLogin()).thenReturn("dave@mail.muni.cz");
-//        when(userInfoDTO1.getFullName()).thenReturn("Peter Parker");
-//        when(userInfoDTO2.getFullName()).thenReturn("David Holman");
-//        given(idmGroupRefRepository.findAllByRoleType(anyString())).willReturn(Arrays.asList(groupRef1, groupRef2));
-//        given(restTemplate.exchange(anyString(), eq(HttpMethod.GET), any(HttpEntity.class), any(ParameterizedTypeReference.class))).
-//                willReturn(new ResponseEntity<PageResultResource<UserInfoDTO>>(new PageResultResource<>(Arrays.asList(userInfoDTO1, userInfoDTO2)), HttpStatus.OK));
-//
-//        List<UserInfoDTO> users = trainingDefinitionService.getUsersWithGivenRole(RoleTypeSecurity.DESIGNER, pageable);
-//
-//        assertEquals(2, users.size());
-//        assertTrue(users.contains(userInfoDTO1));
-//        assertTrue(users.contains(userInfoDTO2));
-//    }
-//
-//    @Test
-//    public void getUsersWithGivenRoleWithUserAndGroupError() {
-//        when(groupRef1.getIdmGroupId()).thenReturn(1L);
-//        when(groupRef2.getIdmGroupId()).thenReturn(2L);
-//        given(idmGroupRefRepository.findAllByRoleType(anyString())).willReturn(Arrays.asList(groupRef1, groupRef2));
-//        given(restTemplate.exchange(anyString(), eq(HttpMethod.GET), any(HttpEntity.class), any(ParameterizedTypeReference.class))).
-//                willReturn(new ResponseEntity<PageResultResource<UserInfoDTO>>(new PageResultResource<>(Arrays.asList()), HttpStatus.NOT_FOUND));
-//        thrown.expect(ServiceLayerException.class);
-//        thrown.expectMessage("Error while obtaining info about users in designers groups.");
-//        List<UserInfoDTO> users = trainingDefinitionService.getUsersWithGivenRole(RoleTypeSecurity.DESIGNER, pageable);
-//
-//    }
-//
-//    @Test
-//    public void getUsersWithGivenRoleWithEmptyListOfIdmGroupRefs() {
-//        given(idmGroupRefRepository.findAllByRoleType(anyString())).willReturn(Collections.emptyList());
-//
-//        List<UserInfoDTO> users = trainingDefinitionService.getUsersWithGivenRole(RoleTypeSecurity.DESIGNER, pageable);
-//        assertEquals(0, users.size());
-//    }
-
     @Test
     public void findUserRefByLogin() {
         UserRef userRef = new UserRef();
@@ -990,33 +728,34 @@ public class TrainingDefinitionServiceTest {
     }
 
     @Test
-    public void switchState_UNRELEASEDtoRELEASED(){
+    public void switchState_UNRELEASEDtoRELEASED() {
         given(trainingDefinitionRepository.findById(anyLong())).willReturn(Optional.of(unreleasedDefinition));
         trainingDefinitionService.switchState(unreleasedDefinition.getId(), cz.muni.ics.kypo.training.api.enums.TDState.RELEASED);
         assertEquals(TDState.RELEASED, unreleasedDefinition.getState());
     }
 
     @Test
-    public void switchState_RELEASEDtoARCHIVED(){
+    public void switchState_RELEASEDtoARCHIVED() {
         given(trainingDefinitionRepository.findById(anyLong())).willReturn(Optional.of(releasedDefinition));
         trainingDefinitionService.switchState(releasedDefinition.getId(), cz.muni.ics.kypo.training.api.enums.TDState.ARCHIVED);
         assertEquals(TDState.ARCHIVED, releasedDefinition.getState());
     }
 
     @Test
-    public void switchState_RELEASEDtoUNRELEASED(){
+    public void switchState_RELEASEDtoUNRELEASED() {
         given(trainingDefinitionRepository.findById(anyLong())).willReturn(Optional.of(releasedDefinition));
         given(trainingInstanceRepository.existsAnyForTrainingDefinition(anyLong())).willReturn(false);
         trainingDefinitionService.switchState(releasedDefinition.getId(), cz.muni.ics.kypo.training.api.enums.TDState.UNRELEASED);
         assertEquals(TDState.UNRELEASED, releasedDefinition.getState());
     }
+
     @Test
-    public void switchState_RELEASEDtoUNRELEASED_withCreatedInstances(){
+    public void switchState_RELEASEDtoUNRELEASED_withCreatedInstances() {
         given(trainingDefinitionRepository.findById(anyLong())).willReturn(Optional.of(releasedDefinition));
         given(trainingInstanceRepository.existsAnyForTrainingDefinition(anyLong())).willReturn(true);
         thrown.expect(ServiceLayerException.class);
         thrown.expectMessage("Cannot update training definition with already created training instance. " +
-            "Remove training instance/s before updating training definition.");
+                "Remove training instance/s before updating training definition.");
         trainingDefinitionService.switchState(releasedDefinition.getId(), cz.muni.ics.kypo.training.api.enums.TDState.UNRELEASED);
     }
 
@@ -1049,7 +788,7 @@ public class TrainingDefinitionServiceTest {
         given(securityContext.getAuthentication()).willReturn(auth);
         given(auth.getUserAuthentication()).willReturn(auth);
         given(auth.getCredentials()).willReturn(sub);
-        given(auth.getAuthorities()).willReturn(Arrays.asList(new SimpleGrantedAuthority(RoleType.ROLE_TRAINING_ADMINISTRATOR.name())));
+        given(auth.getAuthorities()).willReturn(List.of(new SimpleGrantedAuthority(RoleType.ROLE_TRAINING_ADMINISTRATOR.name())));
         given(authentication.getDetails()).willReturn(auth);
     }
 }
